--- a/Music 216 Instrument/Info.plist
+++ b/Music 216 Instrument/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>the zucc wants you to watch him seeing you</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>the zucc sees all</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
